--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>Gostaria de trabalhar onde a minha experiência de 31 anos, possa contribuir com o
-              desenvolvimento da empresa, agregando valores e trocando informações que me permitam
-              aperfeiçoamento profissional, utilizando de minhas habilidades técnicas.</p>
+            <p>Desenvolvedor Front End com conhecimento em Java - Estudante de análise e desenlvimento de sistemas - 
+              Doutorado em Literatura pela Universidade de Santiago de Compostela. Estagiou e trabalhou na DB Server.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -101,22 +100,16 @@
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Petrobras Biocombustível - Prestação de Serviços pela Kempetro Engenharia</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro de 2019 - <span class="w3-tag w3-teal w3-round">Aual</span></h6>
-              <p>Fiscal de campo de contrato; Função de líder de equipe no setor da balança e faturamento na usina de biodiesel em candeias; Faturamento de notas fiscais para expedição de B100 (Biodiesel) e produtos especiais; Tratamento 
-                das notas fiscais de matérias primas e insumos recebidos, entrada de mercadoria (MIGO) no 
-                sistema SAP/R3; Controle de entrada, saída e pesagem de carretas; Atuando na automatização de 
-                processos SAP-Excel; Executar serviços de apoio nas áreas de recursos de administração, 
-                finanças e logística; Atendimento de fornecedores e clientes interno e externo, fornecendo e 
-                recebendo informações sobre produtos e serviços; Tratamento de documentos variados, cumprindo 
-                todo o procedimento necessário referente aos mesmos; Arquivamento de documentos;</p>
-              <hr>
+              <h5 class="w3-opacity"><b>DB server</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Junho de 2022 - <span class="w3-tag w3-teal w3-round">Até abril de 2023</span></h6>
+              <p>Entrei na DB pelo programa Start DB na trilha de Java/Angular, na qual participei de um projeto de criação de um jogo online chamado "Corações da Lila". Fui admitido como efetivo no departamento de educação da DB durante 3 meses. Depois, fui para outro setor para trabalhar como QA.</p>
+              
             </div>
-            <div class="w3-container">
+            <!--<div class="w3-container">
               <h5 class="w3-opacity"><b>TODO</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
               <p>TODO</p>
-            </div>
+            </div>-->
           </div>
   
           <div class="w3-container w3-card w3-white">
