--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>Desenvolvedor Front End com conhecimento em Java - Estudante de análise e desenlvimento de sistemas - 
-              Doutorado em Literatura pela Universidade de Santiago de Compostela. Estagiou e trabalhou na DB Server.</p>
+            <p>Desenvolvedor Front End com conhecimento em Java - Estudante de análise e desenvolvimento de sistemas - 
+              Doutorado em Literatura pela Universidade de Santiago de Compostela - Espanha. Estagiou e trabalhou na DB Server.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -125,16 +125,19 @@
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="https://www.dio.me/certificate/6213111D" target="_blank">Curso: TQI Fullstack Developer (125h)</a></li>
-                <li><a href="https://www.dio.me/certificate/72361F24" target="_blank">Curso: Formação HTML Web Developer (21h)</a></li>
-                <li><a href="https://www.dio.me/certificate/64CE8868" target="_blank">Curso: Formação CSS Web Developer (46h)</a></li>
+                <li><a href="https://hermes.dio.me/certificates/IGKG7TXQ.pdf" target="_blank">Curso: Formação HTML Web Developer (21h)</a></li>
+                <li><a href="https://hermes.dio.me/certificates/OODJ1GYE.pdf" target="_blank">Curso: Formação CSS Web Developer (43h)</a></li>
+                <li><a href="https://hermes.dio.me/certificates/OODJ1GYE.pdf" target="_blank">Curso: Formação Fundamentos de Inteligência Artificial (10h)</a></li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Centro Educacional Teodoro Sampaio</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>1993 - 1995</h6>
-              <p>Técnico em Contabilidade</p>
+              <h5 class="w3-opacity"><b>Universidade Estácio de Sá</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023 - 2025</h6>
+              <p>Graduando em Análise e Desenvolvimento de Sistemas</p>
+              <h5 class="w3-opacity"><b>Universidade de Santiago de Compostela - Espanha</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2005 - 2010</h6>
+              <p>Doutorado em Teoria da Literatura e Literatura Comparada</p>
             </div>
           </div>
 
