--- a/index.html
+++ b/index.html
@@ -148,18 +148,18 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                <a href="https://github.com/gitpoet/maquina-de-ler-site-exp" target="_blank">github.com/gitpoet</a>
               </h6>
-              <p>TODO</p>
+              <p>Site experimental da Editora Máquina de Ler, de propriedade do poeta Carlos Dantas, utilizando o framework Boostrap.</p>
               <hr>
             </div>
-            <div class="w3-container">
+            <!--<div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
                 <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
               </h6>
               <p>TODO</p>
-            </div>
+            </div>-->
           </div>
   
           <!-- End Right Column -->
@@ -173,8 +173,8 @@
   
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="https://github.com/JorgeSantosxp" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="https://www.linkedin.com/in/jorge-santos-41774793" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <a href="https://github.com/gitpoet" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="www.linkedin.com/in/carlosdantasoliveira" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
